# subdivide20

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
.github/workflows/: ci.yml
doc/: subdivide.html
qvlib/include/: QvAsciiText.h  QvAsciiText.hpp  QvBasic.h  QvBasic.hpp  QvChildList.hpp  QvCone.hpp  QvCoordinate3.h  QvCoordinate3.hpp  QvCube.hpp  QvCylinder.h  QvCylinder.hpp  QvDB.h  QvDB.hpp  QvDebugError.hpp  QvDict.h  QvDict.hpp  QvDirectionalLight.h  QvDirectionalLight.hpp  QvDrawStyle.h  QvDrawStyle.hpp  QvElement.h  QvElement.hpp  QvField.h  QvField.hpp  QvFieldData.h  QvFieldData.hpp  QvFields.h  QvFields.hpp  QvFontStyle.h  QvFontStyle.hpp  QvGroup.h  QvGroup.hpp  QvIn.h  QvIn.hpp  QvIndexedFaceSet.hpp  QvIndexedLineSet.hpp  QvInfo.hpp  QvInput.hpp  QvLOD.h  QvLOD.hpp  (+94 more)
qvlib/src/: CMakeLists.txt  Makefile.CC  Makefile.gcc  Makefile.linux  Makefile.macos  Makefile.windows  QvAsciiText.cpp  QvChildList.cpp  QvCone.cpp  QvCoordinate3.cpp  QvCube.cpp  QvCylinder.cpp  QvDB.cpp  QvDebugError.cpp  QvDict.cpp  QvDirectionalLight.cpp  QvDrawStyle.cpp  QvElement.cpp  QvField.cpp  QvFieldData.cpp  QvFontStyle.cpp  QvGroup.cpp  QvIn.cpp  QvIndexedFaceSet.cpp  QvIndexedLineSet.cpp  QvInfo.cpp  QvInput.cpp  QvLOD.cpp  QvLib.cpp  QvLists.cpp  QvMFColor.cpp  QvMFFloat.cpp  QvMFInt32.cpp  QvMFLong.cpp  QvMFString.cpp  QvMFVec2f.cpp  QvMFVec3f.cpp  QvMaterial.cpp  QvMaterialBinding.cpp  QvMatrixTransform.cpp  (+44 more)
subdivide/: CMakeLists.txt  Makefile.CC  Makefile.gcc  Makefile.linux  Makefile.macos  Makefile.windows
subdivide/examples/: CMakeLists.txt  Makefile.CC  Makefile.gcc  Makefile.linux  Makefile.macos  Makefile.windows  README  README.md  ccsub  ccsub.cpp  glfw_subviewer.cpp  loopsub  loopsub.cpp  subdiv_array.cpp  subviewer  subviewer.cpp  test.cpp
subdivide/include/: README.md  arcball.h  arcball.hpp  ballviewer.h  ballviewer.hpp  camera.h  camera.hpp  compat.h  compat.hpp  cvec3t.h  cvec3t.hpp  flatmesh.h  flatmesh.hpp  general.hpp  geoobject.h  geoobject.hpp  hmatrix.h  hmatrix.hpp  ipoly.h  ipoly.hpp  ivgraph.h  ivgraph.hpp  pickablequad.h  pickablequad.hpp  pickabletri.h  pickabletri.hpp  pickedstuff.h  pickedstuff.hpp  pickobject.h  pickobject.hpp  pickviewer.h  pickviewer.hpp  quadmanipulator.h  quadmanipulator.hpp  quadmesh.h  quadmesh.hpp  quat.h  quat.hpp  sectorinfo.h  sectorinfo.hpp  (+17 more)
subdivide/meshes/: testscript
subdivide/meshes/closed_meshes/: cube.wrl  cylinder.wrl  klein.wrl  mannequin.wrl  mechpart.wrl  venus.wrl
subdivide/meshes/large_meshes/: bunny.wrl  cupid.wrl
subdivide/meshes/medium_meshes/: beethoven.wrl
subdivide/meshes/open_meshes/: beethoven-mask.wrl  deka.wrl  icosa.wrl  pipes.wrl
subdivide/meshes/testtags/: README  mesh0.wrl  mesh1.wrl  mesh10.wrl  mesh11.wrl  mesh12.wrl  mesh13.wrl  mesh2.wrl  mesh3.wrl  mesh4.wrl  mesh5.wrl  mesh6.wrl  mesh7.wrl  mesh8.wrl  mesh9.wrl
subdivide/src/: CMakeLists.txt  Makefile.CC  Makefile.gcc  Makefile.linux  Makefile.macos  Makefile.windows  README.md  flatmesh.cpp  ivgraph.cpp  quadmanipulator.cpp  quadmesh.cpp  quadrule.cpp  subquad.cpp  subtri.cpp  tagflatmesh.cpp  tagivgraph.cpp  triangle.cpp  triangleiter.cpp  trianglering.cpp  trimanipulator.cpp  trimesh.cpp  trirule.cpp
subdivide/template/: README  README.md  baseface.h  baseface.hpp  basequad.h  basequad.hi  basequad.hpp  basequad.impl.h  basequad.impl.hpp  basetri.h  basetri.hi  basetri.hpp  basetri.impl.h  basetri.impl.hpp  basevertex.h  basevertex.hpp  convface.h  convface.hpp  facemanipulator.h  facemanipulator.hpp  facering.h  facering.hi  facering.hpp  facering.impl.h  facering.impl.hpp  geoface.h  geoface.hpp  mesh.h  mesh.hpp  optdeque.h  optdeque.hpp  quadrule.h  quadrule.hpp  quadruletable.h  quadruletable.hpp  subdivide.h  subdivide.hi  subdivide.hpp  subdivide.impl.h  subdivide.impl.hpp  (+21 more)
subdivide/viewer/: CMakeLists.txt  Makefile.CC  Makefile.gcc  Makefile.linux  Makefile.macos  Makefile.windows  README.md  arcball.cpp  ballviewer.cpp  camera.cpp  geoobject.cpp  glcheck.h  glcheck.hpp  meshobject.h  meshobject.hi  meshobject.hpp  meshobject.impl.h  meshobject.impl.hpp  pickableparam.cpp  pickableparam.h  pickableparam.hpp  pickablequad.cpp  pickabletri.cpp  pickedstuff.cpp  pickmeshobject.h  pickmeshobject.hi  pickmeshobject.hpp  pickmeshobject.impl.h  pickmeshobject.impl.hpp  pickobject.cpp  pickviewer.cpp  selectedobject.h  selectedobject.hpp  uiaction.h  uiaction.hpp  viewer.cpp
subdivide/winnt/: All.dsw  ccsub.dsp  loopsub.dsp  sublib.dsp  subviewer.dsp  viewlib.dsp  winqv.dsp
